--- a/charts/elasticsearch-curator/values.yaml
+++ b/charts/elasticsearch-curator/values.yaml
@@ -99,3 +99,10 @@ priorityClassName: ""
 
 meepOrigin: core
 
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
