--- a/charts/redis/Chart.yaml
+++ b/charts/redis/Chart.yaml
@@ -1,31 +1,18 @@
-name: redis
-
-version: 3.6.0
-
-appVersion: 4.0.10
-
-description: Open source, advanced key-value store. It is often referred to as a data structure server since keys can contain strings, hashes, lists, sets and sorted sets.
-
-keywords:
-
-- redis
-
-- keyvalue
-
-- database
-
-home: http://redis.io/
-
-icon: https://bitnami.com/assets/stacks/redis/img/redis-stack-220x234.png
-
-sources:
-
-- https://github.com/bitnami/bitnami-docker-redis
-
-maintainers:
-
-- name: bitnami-bot
-
-  email: containers@bitnami.com
-
+appVersion: 4.0.11
+description: Open source, advanced key-value store. It is often referred to as a data
+  structure server since keys can contain strings, hashes, lists, sets and sorted
+  sets.
 engine: gotpl
+home: http://redis.io/
+icon: https://bitnami.com/assets/stacks/redis/img/redis-stack-220x234.png
+keywords:
+- redis
+- keyvalue
+- database
+maintainers:
+- email: containers@bitnami.com
+  name: bitnami-bot
+name: redis
+sources:
+- https://github.com/bitnami/bitnami-docker-redis
+version: 4.0.1
