--- a/examples/demo1/demo1-scenario.yaml
+++ b/examples/demo1/demo1-scenario.yaml
@@ -45,7 +45,7 @@ deployment:
                                             id: cloud1-iperf
                                             name: cloud1-iperf
                                             type: CLOUD-APP
-                                            image: gophernet/iperf-server
+                                            image: meep-docker-registry:30001/iperf-server
                                             commandArguments: '-c, export; iperf -s -p $IPERF_SERVICE_PORT'
                                             commandExe: /bin/bash
                                             serviceConfig:
@@ -160,7 +160,7 @@ deployment:
                                             id: zone1-edge1-iperf
                                             name: zone1-edge1-iperf
                                             type: EDGE-APP
-                                            image: gophernet/iperf-server
+                                            image: meep-docker-registry:30001/iperf-server
                                             commandArguments: '-c, export; iperf -s -p $IPERF_SERVICE_PORT'
                                             commandExe: /bin/bash
                                             serviceConfig:
@@ -220,7 +220,7 @@ deployment:
                                             id: zone1-fog1-iperf
                                             name: zone1-fog1-iperf
                                             type: EDGE-APP
-                                            image: gophernet/iperf-server
+                                            image: meep-docker-registry:30001/iperf-server
                                             commandArguments: '-c, export; iperf -s -p $IPERF_SERVICE_PORT;'
                                             commandExe: /bin/bash
                                             serviceConfig:
@@ -271,7 +271,7 @@ deployment:
                                             id: ue1-iperf
                                             name: ue1-iperf
                                             type: UE-APP
-                                            image: gophernet/iperf-client
+                                            image: meep-docker-registry:30001/iperf-client
                                             commandArguments: '-c, export; iperf -u -c $IPERF_SERVICE_HOST -p $IPERF_SERVICE_PORT -t 3600 -b 50M;'
                                             commandExe: /bin/bash
                                             isExternal: null
@@ -374,7 +374,7 @@ deployment:
                                             id: zone2-edge1-iperf
                                             name: zone2-edge1-iperf
                                             type: EDGE-APP
-                                            image: gophernet/iperf-server
+                                            image: meep-docker-registry:30001/iperf-server
                                             commandArguments: '-c, export; iperf -s -p $IPERF_SERVICE_PORT;'
                                             commandExe: /bin/bash
                                             serviceConfig:
