--- a/examples/demo2/demo2-scenario.yaml
+++ b/examples/demo2/demo2-scenario.yaml
@@ -44,7 +44,7 @@ deployment:
                                             id: cloud1-iperf
                                             name: cloud1-iperf
                                             type: CLOUD-APP
-                                            image: gophernet/iperf-server
+                                            image: meep-docker-registry:30001/iperf-server
                                             commandArguments: '-c, export; iperf -s -p $IPERF_SERVICE_PORT'
                                             commandExe: /bin/bash
                                             serviceConfig:
@@ -248,7 +248,7 @@ deployment:
                                             id: ue1-iperf
                                             name: ue1-iperf
                                             type: UE-APP
-                                            image: gophernet/iperf-client
+                                            image: meep-docker-registry:30001/iperf-client
                                             commandArguments: '-c, export; iperf -u -c $IPERF_SERVICE_HOST -p $IPERF_SERVICE_PORT -t 3600 -b 50M;'
                                             commandExe: /bin/bash
                                             isExternal: null
