added support for network characteristics application to external services

--- a/charts/meep-virt-engine/virt-templates/values-template.yaml
+++ b/charts/meep-virt-engine/virt-templates/values-template.yaml
@@ -103,8 +103,9 @@ external:
     {{- end}}
   egressservicemap:
     {{- range .External.EgressServiceMap}}
-    - ip: {{.IP}}
-      name: {{.Name}}
+    - name: {{.Name}}
+      mesvcname: {{.MeSvcName}}
+      ip: {{.IP}}
       port: {{.Port}}
       targetPort: {{.Port}}
       protocol: {{.Protocol}}
