k8s node placement support

--- a/charts/meep-virt-engine/virt-templates/values-template.yaml
+++ b/charts/meep-virt-engine/virt-templates/values-template.yaml
@@ -55,9 +55,19 @@ deployment:
 
   nodeSelector: {}
   tolerations: []
-  affinity: {}
-
-
+  affinity: 
+  {{- if .Deployment.PlacementId}}
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: kubernetes.io/hostname
+            operator: In
+            values:
+            - {{.Deployment.PlacementId}}
+  {{- else}}
+    {}
+  {{- end}}
 
 service:
   enabled: {{.Service.Enabled}}
