PR comments, moved the code from dockerize to build, removed openapi.yaml file in meep-ctrl-engine, created a meep-swagger-ui js-app

--- a/go-apps/meep-ctrl-engine/Dockerfile
+++ b/go-apps/meep-ctrl-engine/Dockerfile
@@ -15,4 +15,5 @@
 FROM debian:9.6-slim
 COPY ./meep-ctrl-engine /meep-ctrl-engine
 COPY ./static /static
+COPY ./api /static/api
 ENTRYPOINT ["/meep-ctrl-engine"]
