--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -29,8 +29,8 @@ repo:
       lint: true
       nodeport: 30000
       api: go-apps/meep-ctrl-engine/api/swagger.yaml
-      apihost: true
       docker-data:
+        api: bin/meep-swagger-ui
         static: bin/meep-frontend
     meep-frontend:
       src: js-apps/meep-frontend
@@ -39,6 +39,11 @@ repo:
       lint: true
       local-deps:
         meep-ctrl-engine-api: js-packages/meep-ctrl-engine-client
+    meep-swagger-ui:
+      src: js-apps/meep-swagger-ui
+      bin: bin/meep-swagger-ui
+      codecov: false
+      lint: false
     meep-webhook:
       src: go-apps/meep-webhook
       bin: bin/meep-webhook
