--- a/charts/meep-webhook/templates/deployment.yaml
+++ b/charts/meep-webhook/templates/deployment.yaml
@@ -56,4 +56,4 @@ spec:
         - name: init-{{ .Values.deployment.dependency }}
           image: busybox
           imagePullPolicy: IfNotPresent
-          command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency }} ; do echo wiating for {{ .Values.deployment.dependency }}; sleep2; done;']
+          command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency }} ; do echo waiting for {{ .Values.deployment.dependency }}; sleep 0.25; done;']
