--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: 1.3.0
+version: 1.3.1
 repo:
   name: AdvantEDGE
   core:
@@ -144,3 +144,5 @@ repo:
     k8s:
       kube-state-metrics:
         chart: charts/kube-state-metrics
+    grafana:
+      chart: charts/grafana
