--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -377,6 +377,14 @@ dashboards:
   default:
     custom-dashboard:
       file: dashboards/metrics.json
+    player-metrics-1-dashboard:
+      file: dashboards/player-metrics-1.json
+    player-metrics-1-nofps-dashboard:
+      file: dashboards/player-metrics-1-nofps.json
+    player-metrics-2-dashboard:
+      file: dashboards/player-metrics-2.json
+    player-metrics-2-nofps-dashboard:
+      file: dashboards/player-metrics-2-nofps.json
   #   some-dashboard:
   #     json: |
   #       $RAW_JSON
