--- a/charts/docker-registry/Chart.yaml
+++ b/charts/docker-registry/Chart.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
-description: A Helm chart for Docker Registry
-name: docker-registry
-version: 1.8.0
 appVersion: 2.7.1
+description: A Helm chart for Docker Registry
 home: https://hub.docker.com/_/registry/
 icon: https://hub.docker.com/public/images/logos/mini-logo.svg
-sources:
-  - https://github.com/docker/distribution-library-image
 maintainers:
-  - name: jpds
-    email: jpds@protonmail.com
-  - name: rendhalver
-    email: pete.brown@powerhrg.com
+- email: jpds@protonmail.com
+  name: jpds
+- email: pete.brown@powerhrg.com
+  name: rendhalver
+name: docker-registry
+sources:
+- https://github.com/docker/distribution-library-image
+version: 1.9.2
