--- a/charts/docker-registry/templates/ingress.yaml
+++ b/charts/docker-registry/templates/ingress.yaml
@@ -21,13 +21,15 @@ metadata:
 spec:
   rules:
     {{- range $host := .Values.ingress.hosts }}
-    - host: {{ $host }}
-      http:
+    - http:
         paths:
           - path: {{ $path }}
             backend:
               serviceName: {{ $serviceName }}
               servicePort: {{ $servicePort }}
+      {{- if $host }}
+      host: {{ $host }}
+      {{- end }}
     {{- end -}}
   {{- if .Values.ingress.tls }}
   tls:
