--- a/charts/meep-webhook/values.yaml
+++ b/charts/meep-webhook/values.yaml
@@ -15,9 +15,10 @@ deployment:
   dependency: meep-redis-master
 
 service:
-  type: NodePort
-  targetPort: 443
-  nodePort: 30006
+  type: ClusterIP
+  # type: NodePort
+  port: 443
+  # nodePort: 30006
 
 image:
   repository: meep-webhook
