--- a/charts/nginx-ingress/values.yaml
+++ b/charts/nginx-ingress/values.yaml
@@ -274,7 +274,8 @@ controller:
       http: http
       https: https
 
-    type: LoadBalancer
+    # type: LoadBalancer
+    type: ClusterIP
 
     # type: NodePort
     # nodePorts:
