--- a/charts/meep-mg-manager/values.yaml
+++ b/charts/meep-mg-manager/values.yaml
@@ -24,10 +24,34 @@ image:
   pullPolicy: Always
 
 service:
-  type: NodePort
-  targetPort: 80
-  nodePort: 30005
+  type: ClusterIP
+  # type: NodePort
+  port: 80
+  # nodePort: 30005
 
+ingress:
+  enabled: true
+
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /mgm
+
+  annotations:
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   rewrite ^/metrics(/|$)(.*)$ /$2 break;
+
+  labels: {}
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
+    
 codecov:
   enabled: false
 
