--- a/charts/meep-tc-engine/templates/service.yaml
+++ b/charts/meep-tc-engine/templates/service.yaml
@@ -15,7 +15,8 @@ spec:
     app: {{ template "meep-tc-engine.name" . }}
     release: {{ .Release.Name }}
   ports:
-    - port: {{ .Values.deployment.port }}
-      targetPort: {{ .Values.service.targetPort }}
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.deployment.port }}
+      {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
-
+      {{- end }}
