added environment variable to meep-loc-serv container to set root url to use in resourceURL responses

--- a/charts/meep-loc-serv/templates/deployment.yaml
+++ b/charts/meep-loc-serv/templates/deployment.yaml
@@ -41,6 +41,9 @@ spec:
           ports:
             - containerPort: {{ .Values.deployment.port }}
               protocol: {{ .Values.deployment.protocol }}
+          env:
+            - name: MEEP_LOC_SERV_ROOT_URL
+              value: {{ .Values.image.env.rooturl }}
           {{- if .Values.codecov.enabled}}
           volumeMounts:
           - name: codecov-storage
