--- a/charts/meep-metrics-engine/values.yaml
+++ b/charts/meep-metrics-engine/values.yaml
@@ -14,6 +14,8 @@ image:
   repository: meep-metrics-engine
   tag: latest
   pullPolicy: Always
+  env:
+    rooturl: "http://www.example.com"
 
 service:
   type: ClusterIP
