--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -15,205 +15,221 @@
 version: 1.4.2
 repo:
   name: AdvantEDGE
+
+  #------------------------------
+  #  Core Subsystem
+  #------------------------------
   core:
-    meep-user:
-      service-account: charts/meep-user/meep-user-serviceaccount.yaml
-      cluster-role-binding: charts/meep-user/meep-user-clusterrolebinding.yaml
-      codecov: false
-      lint: false
 
-    # CORE APPS (JS)
-    meep-frontend:
-      src: js-apps/meep-frontend
-      bin: bin/meep-frontend
-      codecov: false
-      lint: true
-      local-deps:
-        meep-ctrl-engine-api: js-packages/meep-ctrl-engine-client
-    meep-swagger-ui:
-      src: js-apps/meep-swagger-ui
-      bin: bin/meep-swagger-ui
-      codecov: false
-      lint: false
-      api-bundle:
-        - meep-ctrl-engine
-        - meep-metrics-engine
-        - meep-metrics-engine-notification-client
-        - meep-mg-manager
-        - meep-mg-app-client
-        - meep-rnis
-        - meep-rnis-notification-client
-        - meep-loc-serv
-        - meep-loc-serv-notification-client
+    # Go Applications
+    go-apps:
+      meep-ctrl-engine:
+        src: go-apps/meep-ctrl-engine
+        bin: bin/meep-ctrl-engine
+        chart: charts/meep-ctrl-engine
+        codecov: true
+        lint: true
+        api: go-apps/meep-ctrl-engine/api/swagger.yaml
+        docker-data:
+          api: bin/meep-swagger-ui
+          static: bin/meep-frontend
+      meep-mon-engine:
+        src: go-apps/meep-mon-engine
+        bin: bin/meep-mon-engine
+        chart: charts/meep-mon-engine
+        build-flags:
+          - -mod=vendor
+        codecov: true
+        lint: true
+      meep-virt-engine:
+        src: go-apps/meep-virt-engine
+        bin: bin/meep-virt-engine
+        chart: charts/meep-virt-engine
+        codecov: true
+        lint: true
+        docker-data:
+          data: go-apps/meep-virt-engine/docker-data
+      meep-webhook:
+        src: go-apps/meep-webhook
+        bin: bin/meep-webhook
+        chart: charts/meep-webhook
+        build-flags:
+          - -mod=vendor
+        codecov: false
+        lint: true
 
-    # CORE APPS (GO)
-    meep-ctrl-engine:
-      src: go-apps/meep-ctrl-engine
-      bin: bin/meep-ctrl-engine
-      chart: charts/meep-ctrl-engine
-      codecov: true
-      lint: true
-      nodeport: 30000
-      api: go-apps/meep-ctrl-engine/api/swagger.yaml
-      docker-data:
-        api: bin/meep-swagger-ui
-        static: bin/meep-frontend
-    meep-rnis:
-      src: go-apps/meep-rnis
-      bin: bin/meep-rnis
-      chart: charts/meep-rnis
-      build-flags:
-        - -mod=vendor
-      codecov: true
-      lint: true
-      nodeport: 30017
-      api: go-apps/meep-rnis/api/swagger.yaml
-    meep-loc-serv:
-      src: go-apps/meep-loc-serv
-      bin: bin/meep-loc-serv
-      chart: charts/meep-loc-serv
-      build-flags:
-        - -mod=vendor
-      codecov: true
-      lint: true
-      nodeport: 30007
-      api: go-apps/meep-loc-serv/api/swagger.yaml
-    meep-metrics-engine:
-      src: go-apps/meep-metrics-engine
-      bin: bin/meep-metrics-engine
-      chart: charts/meep-metrics-engine
-      build-flags:
-        - -mod=vendor
-      codecov: true
-      lint: true
-      nodeport: 30008
-      api: go-apps/meep-metrics-engine/api/v2/swagger.yaml
-    meep-mg-manager:
-      src: go-apps/meep-mg-manager
-      bin: bin/meep-mg-manager
-      chart: charts/meep-mg-manager
-      codecov: true
-      lint: true
-      nodeport: 30005
-      api: go-apps/meep-mg-manager/api/swagger.yaml
-    meep-mon-engine:
-      src: go-apps/meep-mon-engine
-      bin: bin/meep-mon-engine
-      chart: charts/meep-mon-engine
-      build-flags:
-        - -mod=vendor
-      codecov: true
-      lint: true
-    meep-tc-engine:
-      src: go-apps/meep-tc-engine
-      bin: bin/meep-tc-engine
-      chart: charts/meep-tc-engine
-      codecov: true
-      lint: true
-    meep-tc-sidecar:
-      src: go-apps/meep-tc-sidecar
-      bin: bin/meep-tc-sidecar
-      codecov: false
-      lint: true
-    meep-virt-engine:
-      src: go-apps/meep-virt-engine
-      bin: bin/meep-virt-engine
-      chart: charts/meep-virt-engine
-      codecov: true
-      lint: true
-      docker-data:
-        data: go-apps/meep-virt-engine/docker-data
-    meep-webhook:
-      src: go-apps/meep-webhook
-      bin: bin/meep-webhook
-      chart: charts/meep-webhook
-      build-flags:
-        - -mod=vendor
-      codecov: false
-      lint: true
+    # Javascript Applications
+    js-apps:
+      meep-frontend:
+        src: js-apps/meep-frontend
+        bin: bin/meep-frontend
+        lint: true
+        local-deps:
+          meep-ctrl-engine-api: js-packages/meep-ctrl-engine-client
+      meep-swagger-ui:
+        src: js-apps/meep-swagger-ui
+        bin: bin/meep-swagger-ui
+        lint: false
+        api-bundle:
+          - core.go-apps.meep-ctrl-engine
+          - sandbox.go-apps.meep-loc-serv
+          - sandbox.go-apps.meep-metrics-engine
+          - sandbox.go-apps.meep-mg-manager
+          - packages.go-packages.meep-loc-serv-notification-client
+          - packages.go-packages.meep-metrics-engine-notification-client
+          - packages.go-packages.meep-mg-app-client
+          - meep-rnis
+          - meep-rnis-notification-client
 
-    # # CORE PACKAGES (JS)
-    # meep-ctrl-engine-client:
-    #   src: js-packages/meep-ctrl-engine-client
-    #   lint: false
-    # meep-metrics-engine-client:
-    #   src: js-packages/meep-metrics-engine-client
-    #   lint: false
+    # Kubernetes Objects
+    k8s:
+      meep-user:
+        service-account: charts/meep-user/meep-user-serviceaccount.yaml
+        cluster-role-binding: charts/meep-user/meep-user-clusterrolebinding.yaml
 
-    # CORE PACKAGES (GO)
-    meep-couch:
-      src: go-packages/meep-couch
-      lint: true
-    meep-ctrl-engine-client:
-      src: go-packages/meep-ctrl-engine-client
-      lint: false
-    meep-ctrl-engine-model:
-      src: go-packages/meep-ctrl-engine-model
-      lint: true
-    meep-rnis-client:
-      src: go-packages/meep-rnis-client
-      lint: false
-    meep-rnis-notification-client:
-      src: go-packages/meep-rnis-notification-client
-      lint: false
-      api: go-packages/meep-rnis-notification-client/api/swagger.yaml
-    meep-loc-serv-client:
-      src: go-packages/meep-loc-serv-client
-      lint: false
-    meep-loc-serv-notification-client:
-      src: go-packages/meep-loc-serv-notification-client
-      lint: false
-      api: go-packages/meep-loc-serv-notification-client/api/swagger.yaml
-    meep-logger:
-      src: go-packages/meep-logger
-      lint: true
-    meep-http-logger:
-      src: go-packages/meep-http-logger
-      lint: true
-    meep-metric-store:
-      src: go-packages/meep-metric-store
-      lint: true
-    meep-metrics-engine-notification-client:
-      src: go-packages/meep-metrics-engine-notification-client
-      lint: false
-      api: go-packages/meep-metrics-engine-notification-client/api/swagger.yaml
-    meep-mg-app-client:
-      src: go-packages/meep-mg-app-client
-      lint: false
-      api: go-packages/meep-mg-app-client/api/swagger.yaml
-    meep-mg-manager-client:
-      src: go-packages/meep-mg-manager-client
-      lint: false
-    meep-mg-manager-model:
-      src: go-packages/meep-mg-manager-model
-      lint: true
-    meep-model:
-      src: go-packages/meep-model
-      lint: true
-    meep-net-char-mgr:
-      src: go-packages/meep-net-char-mgr
-      lint: true
-    meep-redis:
-      src: go-packages/meep-redis
-      lint: true
-    meep-replay-manager:
-      src: go-packages/meep-replay-manager
-      lint: true
-    meep-watchdog:
-      src: go-packages/meep-watchdog
-      lint: true
+  #------------------------------
+  #  Sandbox Subsystem
+  #------------------------------
+  sandbox:
+
+    # Go Applications
+    go-apps:
+      meep-loc-serv:
+        src: go-apps/meep-loc-serv
+        bin: bin/meep-loc-serv
+        chart: charts/meep-loc-serv
+        build-flags:
+          - -mod=vendor
+        codecov: false
+        lint: true
+        api: go-apps/meep-loc-serv/api/swagger.yaml
+      meep-metrics-engine:
+        src: go-apps/meep-metrics-engine
+        bin: bin/meep-metrics-engine
+        chart: charts/meep-metrics-engine
+        build-flags:
+          - -mod=vendor
+        codecov: false
+        lint: true
+        api: go-apps/meep-metrics-engine/api/v2/swagger.yaml
+      meep-mg-manager:
+        src: go-apps/meep-mg-manager
+        bin: bin/meep-mg-manager
+        chart: charts/meep-mg-manager
+        codecov: false
+        lint: true
+        api: go-apps/meep-mg-manager/api/swagger.yaml
+      meep-rnis:
+        src: go-apps/meep-rnis
+        bin: bin/meep-rnis
+        chart: charts/meep-rnis
+        build-flags:
+          - -mod=vendor
+        codecov: false
+        lint: true
+        api: go-apps/meep-rnis/api/swagger.yaml
+      meep-tc-engine:
+        src: go-apps/meep-tc-engine
+        bin: bin/meep-tc-engine
+        chart: charts/meep-tc-engine
+        codecov: false
+        lint: true
+      meep-tc-sidecar:
+        src: go-apps/meep-tc-sidecar
+        bin: bin/meep-tc-sidecar
+        codecov: false
+        lint: true
+
+  #------------------------------
+  #  Dependencies
+  #------------------------------
   dep:
-    couchdb:
+    meep-couchdb:
       chart: charts/couchdb
-    docker-registry:
+    meep-docker-registry:
       chart: charts/docker-registry
-    grafana:
+    meep-grafana:
       chart: charts/grafana
-    influxdb:
+    meep-influxdb:
       chart: charts/influxdb
-    kube-state-metrics:
+    meep-kube-state-metrics:
       chart: charts/kube-state-metrics
-    nginx-ingress:
+    meep-ingress:
       chart: charts/nginx-ingress
-    redis:
+    meep-redis:
       chart: charts/redis
+
+  #------------------------------
+  #  Packages
+  #------------------------------
+  packages:
+
+    # Go Packages
+    go-packages:
+      meep-couch:
+        src: go-packages/meep-couch
+        lint: true
+      meep-ctrl-engine-client:
+        src: go-packages/meep-ctrl-engine-client
+        lint: false
+      meep-ctrl-engine-model:
+        src: go-packages/meep-ctrl-engine-model
+        lint: true
+      meep-loc-serv-client:
+        src: go-packages/meep-loc-serv-client
+        lint: false
+      meep-loc-serv-notification-client:
+        src: go-packages/meep-loc-serv-notification-client
+        lint: false
+        api: go-packages/meep-loc-serv-notification-client/api/swagger.yaml
+      meep-logger:
+        src: go-packages/meep-logger
+        lint: true
+      meep-metric-store:
+        src: go-packages/meep-metric-store
+        lint: true
+      meep-metrics-engine-notification-client:
+        src: go-packages/meep-metrics-engine-notification-client
+        lint: false
+        api: go-packages/meep-metrics-engine-notification-client/api/swagger.yaml
+      meep-mg-app-client:
+        src: go-packages/meep-mg-app-client
+        lint: false
+        api: go-packages/meep-mg-app-client/api/swagger.yaml
+      meep-mg-manager-client:
+        src: go-packages/meep-mg-manager-client
+        lint: false
+      meep-mg-manager-model:
+        src: go-packages/meep-mg-manager-model
+        lint: true
+      meep-model:
+        src: go-packages/meep-model
+        lint: true
+      meep-net-char-mgr:
+        src: go-packages/meep-net-char-mgr
+        lint: true
+      meep-redis:
+        src: go-packages/meep-redis
+        lint: true
+      meep-replay-manager:
+        src: go-packages/meep-replay-manager
+        lint: true
+      meep-rnis-client:
+        src: go-packages/meep-rnis-client
+        lint: false
+      meep-rnis-notification-client:
+        src: go-packages/meep-rnis-notification-client
+        lint: false
+        api: go-packages/meep-rnis-notification-client/api/swagger.yaml
+      meep-watchdog:
+        src: go-packages/meep-watchdog
+        lint: true
+
+    # Javascript Packages
+    js-packages:
+      meep-ctrl-engine-client:
+        src: js-packages/meep-ctrl-engine-client
+        lint: false
+      meep-metrics-engine-client:
+        src: js-packages/meep-metrics-engine-client
+        lint: false
