adding rnis notification to /api

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -42,6 +42,7 @@ repo:
         - meep-mg-manager
         - meep-mg-app-client
         - meep-rnis
+        - meep-rnis-notification-client
         - meep-loc-serv
         - meep-loc-serv-notification-client
 
@@ -148,6 +149,13 @@ repo:
     meep-ctrl-engine-model:
       src: go-packages/meep-ctrl-engine-model
       lint: true
+    meep-rnis-client:
+      src: go-packages/meep-rnis-client
+      lint: false
+    meep-rnis-notification-client:
+      src: go-packages/meep-rnis-notification-client
+      lint: false
+      api: go-packages/meep-rnis-notification-client/api/swagger.yaml
     meep-loc-serv-client:
       src: go-packages/meep-loc-serv-client
       lint: false
