--- a/charts/sandbox/meep-tc-engine/templates/service.yaml
+++ b/charts/sandbox/meep-tc-engine/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "meep-tc-engine.fullname" . }}
+  name: {{ .Values.service.name }}
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ template "meep-tc-engine.name" . }}
