--- a/charts/core/meep-webhook/templates/clusterrolebinding.yaml
+++ b/charts/core/meep-webhook/templates/clusterrolebinding.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: "{{ .Values.serviceAccount }}-{{ .Values.namespace }}"
+  name: "{{ .Release.Namespace }}:{{ .Values.serviceAccount }}"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -9,4 +9,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.serviceAccount }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
+  
