demo2 user chart fix to include release name label

--- a/examples/demo2/charts/iperf/templates/deployment.yaml
+++ b/examples/demo2/charts/iperf/templates/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "meep.fullname" . }}
+  labels:
+    release: {{ .Release.Name }}
 spec:
   replicas: 1
   selector:
